2017-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr7*.c
	  support/regression/tests/gcc-torture-execute-pr8*.c:
	  Port more tests from the GCC testsuite.
	* support/regression/tests/gcc-torture-execute-930529-1.c:
	  Disable test that hangs on GCC 7.2.0 for host.
	* support/regression/tests/gcc-torture-execute-pr51581-?.c:
	  Fix for test-host.

2017-09-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.c:
	  Improve error message for storage class specifiers in parameters.
	* src/SDCC.y:
	  Separate type qualifiers from type specifiers to prepare for RFE #2538.
	* support/regression/tests/gcc-torture-execute-20120111-1.c,
	  support/regression/tests/gcc-torture-execute-20120817-1.c,
	  support/regression/tests/gcc-torture-execute-20140212-1.c,
	  support/regression/tests/gcc-torture-execute-20141125-1.c,
	  support/regression/tests/gcc-torture-execute-20170111-1.c,
	  support/regression/tests/gcc-torture-execute-pr65170.c,
	  support/regression/tests/gcc-torture-execute-pr65215-1.c,
	  support/regression/tests/gcc-torture-execute-pr65215-2.c,
	  support/regression/tests/gcc-torture-execute-pr66940.c,
	  support/regression/tests/gcc-torture-execute-pr69320-4.c:
	  Disable new long long tests for ds390.
	* src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.h,
	  src/SDCCsymt.c,
	  support/regression/tests/p99-conformance.c:
	  Partially fix bug #2538: const and volatile in array parameters.
	* support/regression/tests/gcc-torture-execute-pr51581-1.c:
	  Fix for test-host.
	* src/SDCC.y,
	  support/regression/tests/p99-conformance.c:
	  Fix bug #2538: qualifiers in array parameters (ISO C99).
	* doc/sdccman.lyx:
	  Document missing support for static in array parameters.

2017-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20111227-1.c,
	  support/regression/tests/gcc-torture-execute-2012*.c,
	  support/regression/tests/gcc-torture-execute-2013*.c,