@@ -1,3 +1,12 @@
+2017-09-28 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCC.y,
+	  src/SDCCerr.c,
+	  src/SDCCerr.h,
+	  support/regression/tests/p99-conformance.c,
+	  doc/sdccman.lyx:
+	  Implement RFE #537: static in array parameters.
+
 2017-09-27 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/gcc-torture-execute-pr7*.c
